<resources>
    <string name="app_name">Eagle Media</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_in_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">eagle_media@yahoo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_lunch">Lunch</string>
    <string name="menu_instagram">Instgram</string>
    <string name="button">Save</string>
    <string name="menu_mail">Mail</string>
    <string name="menu_extracurriculars">Extracurriculars</string>
    <string name="sent">Sent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="todo">TODO</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="password_must_be_more_than_5_characters">Password must be more than 5 characters</string>
    <string name="click_to_register_with_instagram">Click to Register with Instagram</string>
    <string name="instagram">Instagram</string>
    <string name="menu_help">Bug Reporting System</string>
    <string name="check">check</string>


    <string-array name="emails">
        <item> No Email Selected </item>
        <item> jcar@dunlapcusd.net </item>
        <item> rbowman@dunlapcusd.net </item>
        <item> fbrown@dunlapcusd.net </item>
        <item> cfritz@dunlapcusd.net </item>
        <item> kboyle@dunlapcusd.net </item>
    </string-array>
</resources>