<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_extracurriculars"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_extracurriculars" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_lunch"
            android:icon="@drawable/lunch"
            android:title="@string/menu_lunch" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_mail" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_instagram"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_instagram" />
    </group>
</menu>