<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_about">

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.ha.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_courses"
        android:name="com.example.ha.ui.courses.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />
    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.ha.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/nav_mail"
        android:name="com.example.ha.ui.mail.MailFragment"
        android:label="@string/menu_mail"
        tools:layout="@layout/fragment_mail" />
    <fragment
        android:id="@+id/nav_extracurriculars"
        android:name="com.example.ha.ui.extracurriculars.ExtracurricularsFragment"
        android:label="@string/menu_extracurriculars"
        tools:layout="@layout/fragment_extracurriculars" />
    <fragment
        android:id="@+id/nav_lunch"
        android:name="com.example.ha.ui.lunch.LunchFragment"
        android:label="@string/menu_lunch"
        tools:layout="@layout/fragment_lunch" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.ha.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_instagram"
        android:name="com.example.ha.ui.instagram.InstagramFragment"
        android:label="@string/menu_instagram"
        tools:layout="@layout/fragment_instagram" />

</navigation>